# so101_hx35hm_bridge

./: .gitignore  README.md
src/: HX35HM_SO101_MoveIt规划控制启动流程.md  HX35HM_SO101_手眼标定重做步骤.md  HX35HM_SO101_摄像头调位与可视化执行步骤.md  HX35HM_SO101_相机内参标定完整步骤.md  HX35HM_SO101_硬件BOM清单.md  HX35HM_SO101_红球抓取完整执行步骤.md  HX35HM_SO101_装配姿态与归零建议.md  HX35HM_SO101_超详细装配流程.md
src/so101-ros-physical-ai/: README.md  USAGE_zh.md
src/so101-ros-physical-ai/so101_bringup/: .flake8  CMakeLists.txt  package.xml
src/so101-ros-physical-ai/so101_bringup/config/: hx35hm_bridge_params.yaml
src/so101-ros-physical-ai/so101_bringup/config/cameras/: cam_overhead_calib.yaml  cam_overhead_calib_placeholder.yaml  cam_overhead_calib_placeholder_320.yaml  so101_cameras_astra_overhead_rgbd.yaml  so101_cameras_astra_overhead_rgbd_lowbw.yaml  so101_cameras_realsense.yaml  so101_gs_cam_astra_overhead.yaml  so101_gs_cam_astra_overhead_320.yaml  so101_no_cameras.yaml  so101_openni2.yaml  so101_openni2_320.yaml  so101_realsense2.yaml
src/so101-ros-physical-ai/so101_bringup/config/recording/: episode_recorder_so101.yaml
src/so101-ros-physical-ai/so101_bringup/launch/: camera_tf_moveit.launch.py  cameras.launch.py  follower.launch.py  follower_hx35hm_moveit.launch.py  follower_hx35hm_moveit_fixed.launch.py  follower_split.launch.py  leader.launch.py  teleop.launch.py
src/so101-ros-physical-ai/so101_bringup/rviz/: vision_overhead_debug.rviz
src/so101-ros-physical-ai/so101_description/: CMakeLists.txt
src/so101-ros-physical-ai/so101_description/launch/: display.launch.py
src/so101-ros-physical-ai/so101_description/urdf/end_effectors/: so101_ee_follower.xacro
src/so101-ros-physical-ai/so101_grasping/: CMakeLists.txt  package.xml
src/so101-ros-physical-ai/so101_grasping/launch/: so101_visual_grasp.launch.py
src/so101-ros-physical-ai/so101_grasping/src/: so101_simple_pick.cpp  so101_visual_grasp.cpp
src/so101-ros-physical-ai/so101_moveit_config/config/: kinematics.yaml  octomap_pointcloud.yaml  ompl_planning.yaml  sensors_3d.yaml  so101_arm.srdf
src/so101-ros-physical-ai/so101_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
src/so101-ros-physical-ai/so101_teleop/: .flake8  CMakeLists.txt
src/so101-ros-physical-ai/tools/camera_intrinsics/: calibrate_ros_camera_intrinsics.py
src/so101-ros-physical-ai/tools/handeye/: auto_motion_aruco_sampler.py  collect_aruco_handeye_samples.py  so101_joint_gui.py  solve_aruco_handeye.py
src/so101_hx35hm_bridge/: package.xml  setup.cfg  setup.py
src/so101_hx35hm_bridge/config/: assembly_calibration.yaml
src/so101_hx35hm_bridge/launch/: so101_hx35hm_bridge.launch.py
src/so101_hx35hm_bridge/resource/: so101_hx35hm_bridge
src/so101_hx35hm_bridge/scripts/: return_all_to_mid.py  so101_assembly_pose.py
src/so101_hx35hm_bridge/so101_hx35hm_bridge/: aruco_detector_node.py  bridge_node.py  red_circle_detector_node.py
