<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so101_bringup</name>
  <version>0.1.0</version>
  <description>  
    Launch and configuration package for 
    the SO-101 ROS 2 stack (leader/follower bringup, ros2_control, teleop, cameras, 
    RViz/MoveIt demos, and recording sessions).
  </description>
  <maintainer email="dmitri@manajev.com">Dmitri Manajev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>so101_description</depend>

  <!-- ros2_control runtime (ros2_control_node + spawner) -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <!-- TF publishers used by layout_tf.launch.py / camera_tf.launch.py -->
  <exec_depend>tf2_ros</exec_depend>

  <!-- cameras.launch.py spawns nodes from these packages -->
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>gscam</exec_depend>
  <exec_depend>camera_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
